[BUGFIX] Ensure all content inside inspector scrolling is visible
Reviewed-on: https://review.typo3.org/22365
Tested-by: Aske Ertmann
Original-Commit-Hash: ad325280cf55867f70518d784854764ad4ed34e8

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -67,6 +67,7 @@
 		overflow-x: hidden;
 		overflow-y: auto;
 		padding-top: 11px;
+		@include box-sizing(border-box);
 
 		.neos-breadcrumb {
 			max-width: $inspectorWidth - $defaultMargin * 2;
