--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -8892,6 +8892,9 @@
   overflow-x: hidden;
   overflow-y: auto;
   padding-top: 11px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .neos #neos-inspector .neos-inspector-form .neos-breadcrumb {
   max-width: 288px;
